@@ -1,3 +1,8 @@
+2008-08-28  Geoff Norton  <gnorton@novell.com>
+
+	* darwin_stop_world.c:
+	* include/private/gcconfig.h: Add support for Darwin/ARM
+
 2008-08-12  Geoff Norton  <gnorton@novell.com>
 
 	* pthread_support.c: GCC shipped with SLES9 ppc gets confused with our current
